Refs #140518 - mlt card - fix issue on small screen.

--- a/src/SearchBlock/styles.less
+++ b/src/SearchBlock/styles.less
@@ -1154,6 +1154,10 @@ div.ui.modal.facet {
   }
 
   div.filter-list-item.more-like-this {
+    .label {
+      width: 100%;
+    }
+
     i.icon.delete {
       top: 23px !important;
       right: 23px !important;
